@@ -53,7 +53,7 @@ public:
 
 protected:
 
-    virtual bool start(int, char*[]);
+    virtual bool start(int, char*[], int&);
     virtual bool stop();
     virtual CommunicatorPtr initializeCommunicator(int&, char*[], const InitializationData&);
 
@@ -93,7 +93,7 @@ Glacier2::RouterService::RouterService()
 }
 
 bool
-Glacier2::RouterService::start(int argc, char* argv[])
+Glacier2::RouterService::start(int argc, char* argv[], int& status)
 {
     bool nowarn;
 
@@ -117,11 +117,13 @@ Glacier2::RouterService::start(int argc, char* argv[])
     if(opts.isSet("help"))
     {
         usage(argv[0]);
+        status = EXIT_SUCCESS;
         return false;
     }
     if(opts.isSet("version"))
     {
         print(ICE_STRING_VERSION);
+        status = EXIT_SUCCESS;
         return false;
     }
     nowarn = opts.isSet("nowarn");
