@@ -49,7 +49,7 @@ public:
 
 protected:
 
-    virtual bool start(int, char*[]);
+    virtual bool start(int, char*[], int&);
     virtual bool stop();
 
 private:
@@ -64,7 +64,7 @@ IcePatch2::PatcherService::PatcherService()
 }
 
 bool
-IcePatch2::PatcherService::start(int argc, char* argv[])
+IcePatch2::PatcherService::start(int argc, char* argv[], int& status)
 {
     PropertiesPtr properties = communicator()->getProperties();
 
@@ -87,11 +87,13 @@ IcePatch2::PatcherService::start(int argc, char* argv[])
     if(opts.isSet("help"))
     {
         usage(argv[0]);
+        status = EXIT_SUCCESS;
         return false;
     }
     if(opts.isSet("version"))
     {
         print(ICE_STRING_VERSION);
+        status = EXIT_SUCCESS;
         return false;
     }
 
